# point_cloud_aligner

./: .gitignore  CMakeLists — копия.txt  CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  render_window.cpp  render_window.h
.github/workflows/: workflow.yml
